--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,16 +15,20 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "formik": "^2.2.9",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.5",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-star-ratings": "^2.3.0",
     "sass": "^1.60.0",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.6",
     "@types/react-star-ratings": "^2.3.0"
   }
 }
