--- a/backend/package.json
+++ b/backend/package.json
@@ -15,17 +15,23 @@
     "@types/node": "^18.15.6",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/node-fetch": "^2.6.2",
+    "i": "^0.3.7",
     "nodemon": "^2.0.22",
+    "npm": "^9.6.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   }
