--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,16 @@
     "@types/node": "^18.15.6",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.35.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
+    "sharp": "^0.32.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
