--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.2",
     "cloudinary": "^1.35.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node-fetch": "^2.6.2",
