--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.15.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/redux": "^3.6.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
@@ -22,7 +25,11 @@
     "react-fast-marquee": "^1.3.5",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
     "react-star-ratings": "^2.3.0",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.60.0",
     "typescript": "5.0.2",
     "yup": "^1.0.2"
