--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,16 +26,20 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
+    "react-slick": "^0.29.0",
     "react-star-ratings": "^2.3.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.60.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^9.1.1",
     "typescript": "5.0.2",
     "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.6",
+    "@types/react-slick": "^0.23.10",
     "@types/react-star-ratings": "^2.3.0"
   }
 }
