--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
     "react-star-ratings": "^2.3.0",
+    "react-tooltip": "^5.11.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
