--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "path": "^0.12.7",
     "sharp": "^0.32.0",
     "slugify": "^1.6.6"
@@ -35,6 +36,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node-fetch": "^2.6.2",
+    "@types/nodemailer": "^6.4.7",
     "i": "^0.3.7",
     "nodemon": "^2.0.22",
     "npm": "^9.6.2",
