--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.60.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.7.3",
     "swiper": "^9.1.1",
     "typescript": "5.0.2",
     "yup": "^1.0.2"
