--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,15 @@
     "formik": "^2.2.9",
     "next": "13.2.4",
     "next-redux-wrapper": "^8.1.0",
+    "postcss": "^8.4.31",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^9.2.0",
+    "range-slider-input": "^2.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
@@ -33,6 +38,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.60.0",
     "sharp": "^0.32.6",
     "slick-carousel": "^1.8.1",
