--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGODB_URL = mongodb+srv://nhatbui:NHATbui1998@cluster0.e5hehlw.mongodb.net/test
-JWT_KEY = qwertyu
+MONGODB_URL = "mongodb+srv://buivanduynhat:bmq4DvSnHNdIPG9D@cluster0.006lt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+JWT_KEY = "qwertyu"
